2005-04-12  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* nucleus/timer.c (xntimer_next_local_shot): Pessimistically
	substract nktimerlat from delay before programming next shot.

	* include/nucleus/timer.h, nucleus/timer.c: Eliminate
	xntimer_sched and xntimer_set_sched as much as possible at
	compile-time.

	* include/nucleus/asm-i386/hal.h: Allow programming local APIC
	with null delay.

2005-04-12  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/hal/hal.c: Add the required kernel thread support for
	dispatching sysreqs w/ PREEMPT_RT.

	* include/nucleus/asm-*/hal.h: Rewrite spinlock helpers sanely.

2005-04-12  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* include/nucleus/asm-i386/hal.h (rthal_set_timer_shot): Program
	the timer for a one tick delay when passed a null delay.

2005-04-11  Jim Cromie <jcromie@divsol.com>

	* scripts/rtai-test: Add preliminary version of the fusion test
	script.
	
2005-04-11  Philippe Gerum  <rpm@xenomai.org>

	* arch/*/hal/hal.c (rthal_ssrq_trampoline): Unstall the root
	domain while running the sysreq handler.

	* skins/rtai/pipe.c (__pipe_flush_handler): Release the superlock
	while cycling on the flush queue.
	(__pipe_flush): Do _not_ free the stream buffer in the flush
	handler: it's the output handler's business.

	* include/nucleus/asm-*/hal.h: Make sysreq-related prototypes and
	names more consistent.
	
2005-04-10  Philippe Gerum  <rpm@xenomai.org>

	* arch/*/hal/hal.c (rthal_request_linux_irq,
	rthal_release_linux_irq): Use generic spinlocks since we must be
	running over the Linux context in those routines.

2005-04-09  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/shadow.c (xnshadow_relax): Make sure we don't
	inadvertently pass out-of-range priority levels to the Linux
	kernel when reentering the root domain (__adeos_reenter_root()).

	* skins/rtai/syscall.c (__rt_intr_create): Handle I_PROPAGATE mode
	bit for dynamic propagation of interrupts down the pipeline