@@ -1,3 +1,8 @@
+2005-04-13  Jim Cromie <jcromie@divsol.com>
+
+	* scripts/rtai-test: Properly stop workload procs upon exit and
+	allow for user-defined workloads.
+
 2005-04-12  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>
 
 	* nucleus/timer.c (xntimer_next_local_shot): Pessimistically
